--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@
         width: 90%;
 
         padding: 0.5em;
-        margin: 150px auto 20px auto;
+        margin: 150px 10px 20px 10px;
         
     }
 
