--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@
     #contener{
         width: 90%;
 
-        padding: 0.5em;
+        padding: 10px;
         margin: 150px 10px 20px 10px;
         
     }
