--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-*{
-    padding: 0px;
-    margin: 0px;
-}
 *:hover{
     cursor:context-menu;
 }
@@ -33,6 +29,9 @@
 
     #contener{
      width: 90%;
+
+    padding: 10px;
+    margin: 150px 0px 20px 0px;
     } 
     
     #learning{
