--- a/style.css
+++ b/style.css
@@ -28,10 +28,11 @@
 /* mobile width  */
 @media screen and (max-width: 400px) {
     #contener{
-        width: 80%;
+        width:90%;
+        margin: 150px 0px 20px p0px;
 
 
-        padding: 10px;
+        padding: 1px;
     }
 
     #learning{
