--- a/style.css
+++ b/style.css
@@ -29,6 +29,8 @@
 @media screen and (max-width: 400px) {
     #contener{
         width: 90%;
+        margin: 0px;
+        padding: 0px;
         
     }
 
